# HiggsMechanism

./: CLAUDE.md  README.md  pyproject.toml
examples/: sm_higgs_mechanism.ipynb
higgs_mechanism/: __init__.py  covariant_kinetic.py  diagonalization.py  feynman_rules.py  gauge_group.py  scalar_potential.py  scalar_sector.py  symbolic_tools.py  validation.py
models/: sm.py
tests/: test_imports.py
