[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "higgs-mechanism"
version = "0.1.0"
description = "SymPy-based package for computing the Higgs mechanism in generic BSM gauge theories"
requires-python = ">=3.9"
dependencies = [
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "notebook"]

[tool.setuptools.packages.find]
where = ["."]
include = ["higgs_mechanism*"]
